--- a/13. tund/login_app/package.json
+++ b/13. tund/login_app/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body": "^5.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
